--- a/notebooks/play_with_audio_wave.ipynb
+++ b/notebooks/play_with_audio_wave.ipynb
@@ -305,6 +305,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(7392960,)\n(1025, 862)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load the audio\n",
+    "data, _ = librosa.load(wav_fname)\n",
+    "print(data.shape)\n",
+    "# create spectrogram of sounds\n",
+    "melSpec = librosa.stft(data[:441000],)\n",
+    "print(melSpec.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
