Add WaveNet playground

--- a/notebooks/midi_model_playground.ipynb
+++ b/notebooks/midi_model_playground.ipynb
@@ -760,13 +760,7 @@
       "3/3 [==============================] - 0s 26ms/step - loss: 1.3202 - categorical_accuracy: 0.4650\n",
       "Epoch 73/500\n",
       "3/3 [==============================] - 0s 34ms/step - loss: 1.2964 - categorical_accuracy: 0.4612\n",
-      "Epoch 74/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 74/500\n",
       "3/3 [==============================] - 0s 35ms/step - loss: 1.3093 - categorical_accuracy: 0.4747\n",
       "Epoch 75/500\n",
       "3/3 [==============================] - 0s 19ms/step - loss: 1.2904 - categorical_accuracy: 0.4530\n",
@@ -1064,13 +1058,7 @@
       "3/3 [==============================] - 0s 23ms/step - loss: 0.6625 - categorical_accuracy: 0.6427\n",
       "Epoch 219/500\n",
       "3/3 [==============================] - 0s 33ms/step - loss: 0.6777 - categorical_accuracy: 0.6595\n",
-      "Epoch 220/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 220/500\n",
       "3/3 [==============================] - 0s 24ms/step - loss: 0.6930 - categorical_accuracy: 0.6642\n",
       "Epoch 221/500\n",
       "3/3 [==============================] - 0s 22ms/step - loss: 0.6956 - categorical_accuracy: 0.6598\n",
@@ -1368,13 +1356,7 @@
       "3/3 [==============================] - 0s 48ms/step - loss: 0.5009 - categorical_accuracy: 0.7167\n",
       "Epoch 365/500\n",
       "3/3 [==============================] - 0s 21ms/step - loss: 0.5437 - categorical_accuracy: 0.6990\n",
-      "Epoch 366/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 366/500\n",
       "3/3 [==============================] - 0s 39ms/step - loss: 0.5246 - categorical_accuracy: 0.6937\n",
       "Epoch 367/500\n",
       "3/3 [==============================] - 0s 31ms/step - loss: 0.5178 - categorical_accuracy: 0.7190\n",
